fetch example added

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 </head>
 
 <body>
-  <name-tag greeting="jae aeich"></name-tag>
-  <foo-bar></foo-bar>
+  <api-table></api-table>
+  <!-- <name-tag greeting="jae aeich"></name-tag>
+  <foo-bar></foo-bar> -->
   <script type="module" src="./out-tsc/src/index.js"></script>
 </body>
 
